[package]
name = "rust-api"
version = "0.1.0"
authors = ["Ignacio Colomo <ignacioromero.colomo@santander.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0.0"
env_logger = "0.6"